1.0.1
- Fixed stairs detroing time was too long
- Fixed poplar sapling wasn't ticking correctly so the trees won't grow
- Fixed fallen poplar no spawning on Dappled Forest
- Fixed Shelf mushroom not spawning on dappled forest either on poplar trunks/logs
- Fixed Shelf mushroom lootable
- Added credits
- Small other fixes and improvements